--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "ella-npm-packs": "^1.0.2",
+    "lz-string": "^1.5.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.1",
+    "sass-loader": "^13.3.1",
+    "tsyringe": "^4.7.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
