--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "rxjs-hooks": "^0.8.0-alpha.0",
     "sass-loader": "^13.3.1",
     "tsyringe": "^4.7.0",
     "typescript": "^4.7.4",
