--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "customize-cra": "^1.0.0",
+    "dexie": "^3.2.4",
     "lz-string": "^1.5.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
